Fix N+1 in Galeria using JOIN FETCH